# QMANN

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE-ACADEMIC  LICENSE-COMMERCIAL  LICENSING_SUMMARY.md  Makefile  ORGANIZATION.md  PATENTS.md  QMANN_COMPREHENSIVE_ANALYSIS.md  README.md  USAGE_WARNING.md  docker-compose.yml  pyproject.toml  qmann_checkpoint.pth
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research_question.md
.github/workflows/: ci.yml
benchmarks/: assetops_adapter.py  run.py
circuits/: README.md
data/: README.md
docker/: Dockerfile
docs/: api_reference.md  quick_start.md
examples/: 01_basic_qmann_tutorial.ipynb  01_basic_qmnn_tutorial.ipynb  01_theoretical_mode.py  02_simulation_mode.py  03_hardware_mode.py  hardware_experiments.py
paper/: Makefile  checklist.md  main.tex  meta.yaml  refs.bib
paper/sections/: 01_intro.tex  02_related.tex  03_theory.tex  04_results.tex  05_discussion.tex  06_conclusion.tex  appendix_a.tex  appendix_b.tex
scripts/: arxiv_meta.py  compress_figs.py  estimate_hardware_costs.py  make_plot.py  production_readiness_test.py  quicktest.sh  reproduce.sh  test_mode_selection.py  validate_quantum_integration.py
src/qmann/: __init__.py  attention.py  cli.py  core.py  error_correction.py  hybrid_layers.py  quantum_advantage.py  quantum_federated.py  quantum_memory.py  quantum_transformers.py  training.py  utils.py
src/qmann.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/qmann/config/: __init__.py
src/qmann/hardware/: experimental_interface.py  quantum_backend.py
src/qmann/telemetry/: agentops_integration.py
src/qmnn/: __init__.py  attention.py  classical_controller.py  cli.py  core.py  error_correction.py  hybrid_layers.py  models.py  quantum_advantage.py  quantum_federated.py  quantum_memory.py  quantum_transformers.py  training.py  utils.py
src/qmnn/config/: __init__.py  experimental_config.py
src/qmnn/core/: noise_aware_qram.py
src/qmnn/hardware/: __init__.py  experimental_interface.py  quantum_backend.py
src/qmnn/telemetry/: agentops_integration.py
src/qmnn/utils/: watermark.py
tests/: __init__.py  test_core.py  test_hardware.py  test_integration.py  test_models.py  test_training.py
